@@ -1,5 +1,7 @@
 package com.fastcampus.programming.dmaker.controller;
 
+import com.fastcampus.programming.dmaker.service.DMakerService;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -10,12 +12,18 @@ import java.util.List;
 
 @Slf4j
 @RestController
+@RequiredArgsConstructor
 public class DMakerController {
 
-    @GetMapping("/developers")
+    private final DMakerService dMakerService;
+
+    @GetMapping("/create-developer")
     public List<String> getAllDevelopers(){
-        log.info("GET /developers HTTP/1.1");
-        return Arrays.asList("Elsa", "Olaf", "Anna");
+        log.info("GET /create-developer HTTP/1.1");
+
+        dMakerService.createDeveloper();
+
+        return List.of("Olaf");
     }
 
 }
